--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environmental files and keys
+.env
+!.env.example #example environment file (safe to commit)
+
